admission/ValidatingAdmissionPolicy/policies/capabilities-add/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: capabilities-add-initcontainers
  annotations:
    kubeapt.io/uuid: "9de7568a-b2d1-4e55-9bef-dba6c1a2f38f"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
